# OmLang-Compiler

./: README.md  om.py  pyproject.toml  setup.py
om-core/: main.py  opcodes.py  parser.py  vm.py
