[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omlang"
version = "4.0.0"
description = "The independent Om Programming Language Compiler and Bytecode VM Engine"
readme = "README.md"
authors = [{ name = "Om Creator" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Development Status :: 4 - Beta"
]

[tool.setuptools]
# SCIENTIFIC FIX: Maps the physical 'om-core' disk folder to a safe import namespace
package-dir = {"om_core" = "om-core"}
packages = ["om_core"]

[project.scripts]
om = "om_core.main:main_entry"